Revert some recent cosmetic fixes for Java 1.4 compatibility
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/dbcp/trunk@896200 13f79535-47bb-0310-9956-ffa450edef68